--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
          inventore aperiam sint voluptatum sed, rerum nulla.
     </p>
     <button type="button"></button>
+    <section>
+        <article>
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Doloribus commodi reiciendis quam illum libero rem facere voluptate odit omnis praesentium hic 
+             quaerat magni porro sunt aut, reprehenderit quas architecto minus?
+        </article>
+    </section>
 </body>
 </html>
